--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
     <TextView
         android:id="@+id/logoFatec"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="130dp"
         android:layout_gravity="center"
         android:layout_marginBottom="15dp"
         android:background="@drawable/ic_fatec_logo_white" />
