--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
 
     <TextView
         android:id="@+id/logoFatec"
-        android:layout_width="wrap_content"
+        android:layout_width="350dp"
         android:layout_height="130dp"
         android:layout_gravity="center"
         android:layout_marginBottom="15dp"
