--- a/app/src/main/res/layout/activity_novo_usuario.xml
+++ b/app/src/main/res/layout/activity_novo_usuario.xml
@@ -204,23 +204,24 @@
                     android:hint="Confirmar Senha"
                     android:inputType="textPassword" />
 
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp" />
-
-                <Button
-                    android:id="@+id/inserirUsuario"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_gravity="center_horizontal"
-                    android:backgroundTint="@color/colorPrimary"
-                    android:text="Concluir"
-                    android:textColor="@color/textColorPrimary" />
-
             </LinearLayout>
 
         </ScrollView>
 
     </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/inserirUsuario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:src="@drawable/ic_person_add_white_24dp"
+        app:backgroundTint="@color/colorAccent"
+        app:borderWidth="0dp"
+        app:elevation="5dp"
+        app:rippleColor="@color/colorAccentRipple" />
 
 </RelativeLayout>
