--- a/app/src/main/res/menu/menu_nova_duvida.xml
+++ b/app/src/main/res/menu/menu_nova_duvida.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="edu.fatec.activity.NovaDuvidaActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/menu_nova_duvida"
+        app:showAsAction="collapseActionView|ifRoom"
+        android:icon="@drawable/ic_help_white_24dp"
+        android:title="Pesquisar"/>
+
 </menu>
