--- a/app/src/main/res/layout/layout_resposta.xml
+++ b/app/src/main/res/layout/layout_resposta.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             android:layout_margin="5dp"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/infoResposta"
@@ -31,8 +31,17 @@
                 android:layout_marginTop="8dp"
                 android:text="Criador em Jan 00, 0000"
                 android:gravity="center_vertical"
+                android:layout_weight=".4"
                 android:textColor="@color/textColorPrimary"
                 android:textSize="15dp" />
+            <TextView
+                android:id="@+id/flagProf"
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:drawableLeft="@drawable/ic_school_white_24dp"
+                android:textSize="15dp"
+                android:layout_weight="0.07" />
         </LinearLayout>
 
         <TextView
