--- a/app/src/main/res/layout/layout_pesquisa.xml
+++ b/app/src/main/res/layout/layout_pesquisa.xml
@@ -58,7 +58,7 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/progressBarSenha"
+        android:id="@+id/progressBarPesquisa"
         android:layout_gravity="center_horizontal"
         android:indeterminate="true"
         android:visibility="gone"/>
