--- a/app/src/main/res/layout/activity_nova_duvida.xml
+++ b/app/src/main/res/layout/activity_nova_duvida.xml
@@ -45,101 +45,106 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/backgroundNovaDuvida"
-            android:layout_centerHorizontal="true"
-            android:orientation="vertical"
-            android:padding="@dimen/activity_vertical_margin">
+            android:layout_gravity="center_horizontal">
 
-            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/backgroundTituloNovaDuvida"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:minHeight="55dp"
-                card_view:cardCornerRadius="2dp">
+                android:layout_height="match_parent"
+                android:layout_below="@id/backgroundNovaDuvida"
+                android:layout_centerHorizontal="true"
+                android:orientation="vertical"
+                android:padding="@dimen/activity_vertical_margin">
 
-                <EditText
-                    android:id="@+id/tituloNovaDuvida"
+                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/backgroundTituloNovaDuvida"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/labelTituloDuvida"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:background="@android:color/transparent"
-                    android:hint="Titúlo da Dúvida" />
+                    android:layout_marginBottom="15dp"
+                    android:minHeight="55dp"
+                    card_view:cardCornerRadius="2dp">
 
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/backgroundConteudoNovaDuvida"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:minHeight="55dp"
-                card_view:cardCornerRadius="2dp">
-
-                <EditText
-                    android:id="@+id/conteudoNovaDuvida"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:background="@android:color/transparent"
-                    android:hint="Conteúdo da Dúvida" />
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/backgroundMateriasDuvida"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                card_view:cardCornerRadius="2dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <edu.fatec.util.MultiSelectionSpinner
-                        android:id="@+id/spinnerMaterias"
+                    <EditText
+                        android:id="@+id/tituloNovaDuvida"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="20dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginTop="20dp" />
+                        android:layout_below="@+id/labelTituloDuvida"
+                        android:layout_gravity="center"
+                        android:layout_margin="10dp"
+                        android:background="@android:color/transparent"
+                        android:hint="Titúlo da Dúvida" />
+                </android.support.v7.widget.CardView>
 
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/backgroundTagNovaDuvida"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:minHeight="55dp"
-                card_view:cardCornerRadius="2dp">
-
-                <EditText
-                    android:id="@+id/tagsNovaDuvida"
+                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/backgroundConteudoNovaDuvida"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:background="@android:color/transparent"
-                    android:hint="Palavras-chave para Dúvida" />
+                    android:layout_marginBottom="15dp"
+                    android:minHeight="55dp"
+                    card_view:cardCornerRadius="2dp">
 
-            </android.support.v7.widget.CardView>
-        </LinearLayout>
+                    <EditText
+                        android:id="@+id/conteudoNovaDuvida"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="10dp"
+                        android:background="@android:color/transparent"
+                        android:hint="Conteúdo da Dúvida" />
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/backgroundMateriasDuvida"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"
+                    card_view:cardCornerRadius="2dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <edu.fatec.util.MultiSelectionSpinner
+                            android:id="@+id/spinnerMaterias"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="20dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginTop="20dp" />
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/backgroundTagNovaDuvida"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"
+                    android:minHeight="55dp"
+                    card_view:cardCornerRadius="2dp">
+
+                    <EditText
+                        android:id="@+id/tagsNovaDuvida"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="10dp"
+                        android:background="@android:color/transparent"
+                        android:hint="Palavras-chave para Dúvida" />
+
+                </android.support.v7.widget.CardView>
+
+            </LinearLayout>
+
+        </ScrollView>
 
     </LinearLayout>
 
