--- a/app/src/main/res/menu/menu_nova_duvida.xml
+++ b/app/src/main/res/menu/menu_nova_duvida.xml
@@ -6,6 +6,6 @@
         android:id="@+id/menu_nova_duvida"
         app:showAsAction="collapseActionView|ifRoom"
         android:icon="@drawable/ic_help_white_24dp"
-        android:title="Pesquisar"/>
+        android:title="Ajuda"/>
 
 </menu>
