--- a/app/src/main/res/layout/layout_nova_duvida.xml
+++ b/app/src/main/res/layout/layout_nova_duvida.xml
@@ -118,7 +118,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Palavras-chave facilitam a buscar para novos outros alunos."
+            android:text="Palavras-chave facilitam a busca de dúvidas para novos outros alunos."
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
