--- a/app/src/main/res/layout/layout_duvida_test.xml
+++ b/app/src/main/res/layout/layout_duvida_test.xml
@@ -10,7 +10,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:animateLayoutChanges="true">
 
         <LinearLayout
             android:id="@+id/backgroundDuvida"
